--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,34 +9,36 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"      android:excludeFromRecents="true">
+        <activity
+            android:name=".MainActivity"
+            android:excludeFromRecents="true">
             <intent-filter android:priority="1000">
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity  android:name=".PackageManagerDemo.PackagerManagerActivity">
-
+        <activity android:name=".PackageManagerDemo.PackagerManagerActivity">
             <intent-filter android:priority="0">
                 <action android:name="com.bourne.ACTION_PACKAGEMANAGER"/>
-                <category android:name="android.intent.category.DEFAULT"/>    <!--此句一般都要加 -->
-                <category android:name="com.bourne.CATEGORY_PACKAGEMANAGER"></category>
-                <data android:host="www.xiazdong.com"
-                      android:mimeType="text/plain"
-                      android:scheme="xiazdong">
+
+                <category android:name="android.intent.category.DEFAULT"/> <!-- 此句一般都要加 -->
+                <category android:name="com.bourne.CATEGORY_PACKAGEMANAGER"/>
+
+                <data
+                    android:host="www.xiazdong.com"
+                    android:mimeType="text/plain"
+                    android:scheme="xiazdong">
                 </data>
             </intent-filter>
         </activity>
-
         <activity android:name=".NetworkRequestDemo.NetworkRequestActivity">
             <intent-filter android:priority="-1000">
                 <action android:name="com.bourne.ACTION_PACKAGEMANAGER"/>
-                <category android:name="android.intent.category.DEFAULT"/>    <!--此句一般都要加 -->
-                <category android:name="com.bourne.CATEGORY_PACKAGEMANAGER"></category>
+
+                <category android:name="android.intent.category.DEFAULT"/> <!-- 此句一般都要加 -->
+                <category android:name="com.bourne.CATEGORY_PACKAGEMANAGER"/>
                 />
             </intent-filter>
         </activity>
@@ -50,6 +52,8 @@
         <activity android:name=".ServiceDemo.ServiceActivity">
         </activity>
         <activity android:name=".IntentFilterDemo.IntentFilterActivity">
+        </activity>
+        <activity android:name=".ThreadDemo.CommonThreadActivity">
         </activity>
     </application>
 
