--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.bourne.android_common">
+<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
 
     <application
         android:name=".APPApplication"
@@ -54,6 +58,8 @@
         <activity android:name=".IntentFilterDemo.IntentFilterActivity">
         </activity>
         <activity android:name=".ThreadDemo.CommonThreadActivity">
+        </activity>
+        <activity android:name=".ServiceDemo.HandlerThreadActivity">
         </activity>
     </application>
 
