--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     compile name: 'rxandroid', ext: 'aar'
     compile project(':Common-Library')
 
-    compile 'com.android.support:appcompat-v7:25.0.0'
 
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
 }
