--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
         </activity>
         <activity android:name=".ServiceDemo.AsyncTaskActivity">
         </activity>
+        <activity android:name=".ServiceDemo.ThreadPoolExecutorActivity">
+        </activity>
     </application>
 
 </manifest>
