--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:name=".APPApplication"
         android:allowBackup="true"
@@ -67,6 +67,8 @@
         <activity android:name=".ThreadDemo.ThreadPoolExecutorActivity">
         </activity>
         <activity android:name=".ThreadDemo.ThreadActivity">
+        </activity>
+        <activity android:name=".WindowDemo.WindowManagerActivity">
         </activity>
     </application>
 
